2007-07-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/RELEASING:
	Update branch and tag names.

2007-07-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/generate-tests:
	* tools/hide:
	* tools/list-glade:
	* tools/pylint:
	Fix minor errors and style issues.

2007-07-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* TODO:
	Clean up to reflect what has actually been done.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/debug.py (_print_traceback):
	Add indented string to code_lines.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/debug.py (_print_traceback):
	Indent code manually to preserve formatting if copied.

2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/save.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/util.py:
	Fix remaining errors so that all unittests pass.

2007-07-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/gtk/actions/format.py:
	* gaupol/gtk/actions/__init__.py:
	* gaupol/gtk/actions/menu.py:
	* gaupol/gtk/actions/view.py:
	* gaupol/gtk/const.py:
	* gaupol/gtk/unittest/case.py:
	Fix or disable all errors reported by pylint.

2007-07-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/data/apidocs.css:
	* tools/data/code.css:
	Fix colors to not be too light.

	* tools/pydoctor:
	Fix source code links.

2007-07-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* COPYING:
	* gaupol/*.py:
	* gaupol/gtk/dialogs/about.py:
	Upgrade license to GPL v3 or later.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py (_init_application):
	Update GUI after selecting video file.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/gaupol.1:
	* gaupol/gtk/main.py:
	Rearrange the order in which options are listed.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/gaupol.1:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/main.py:
	Add option --adapt-translation.

2007-06-30  Osmo Salomaa  <otsaloma@cc.hut.fi>
